--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/addon-essentials": "^8.5.8",
     "@storybook/addon-interactions": "^8.5.8",
     "@storybook/addon-onboarding": "^8.5.8",
+    "@storybook/addon-styling-webpack": "^1.0.1",
     "@storybook/blocks": "^8.5.8",
     "@storybook/react": "^8.5.8",
     "@storybook/react-vite": "^8.5.8",
